--- a/_posts/thesis_chapters/2024-9-5-Design.md
+++ b/_posts/thesis_chapters/2024-9-5-Design.md
@@ -205,12 +205,14 @@ This scope of activity takes as a subject the community of individuals in the ro
 
 ![Illustration 4.x - Larger game making activity system  ](./Pictures/At_dia_1_v3.png){width=95%}
 
-IS THIS RELEVANT HERE?
-There are diverse end audiences for the games. The final target audience are students and staff in the Manchester Met Brooks building where the created games are shared in arcade cabinets at the end of the programme. An additional audience are friends and family who can be send the games to play online. The more immediate audience for the evolving games are peer game makers during the making sessions.
+<!-- IS THIS RELEVANT HERE? -->
+The real or perceived audience of the completed games is relevant when considering the motivating objectives of participants at this level of activity. The explicit  target audience were students and staff in the Manchester Met Brooks building at a final showcase event where the created games were shared in arcade cabinets. An additional audience are friends and family who can be send the games to play online. However, a more immediate and tangible audience for the evolving games were peer game makers and facilitators during the making sessions.
 
 ![Carrot eater game with an self made arcade unit made from cardboard boxes](./Pictures/carroteater3.jpg){width=90%}
 
-While the broad aim of making a game to share is agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which feed into the contradictions which emerge at this level of activity.
+While the object of making a game to share using the suggested tools is tacitly agreed through participation, the in-session audience and peer group appeared to drive some additional motivations and objectives. One of which put simply was play and social interactions between participants.
+
+<!-- These feed into the contradictions which emerge at this level of activity. -->
 
 <!-- IS THIS NEEDED? While the programme had a shared objective of making a game, there were tensions brought by the cultural factors and other objectives imported from other activity systems. The third contradiction explored in this chapter explores those tensions (including? ....). -->
 
@@ -309,8 +311,6 @@ Identifying shifts in participant activity in terms of scope facilitates analysi
 In addition to these shifts in scope, analysis of community processes also involves transformation over time.  The next section offers a description of the evolution of tool use in different phases of the study with an aim to situate analysis of emerging tensions in the use of tools, resources and processes in the following section.
 
 
-<!-- In this thesis, chapter six has a focus on cultural aspects of making a game together and chapter five explores social organisation around the activity of adding game design patterns chapter five.  -->
-
 <!-- After inserting the code which adds a moving enemy to the game, Toby spends five minutes altering the variables involved to match his design and to create a level of challenge that he is happy with. -->
 
 <!-- Toby makes quick progress. one factor here is willingness to make mistakes. There is a confidence here in undoing mistakes, commenting out new code to return to previous behaviour.
@@ -318,25 +318,20 @@ In addition to these shifts in scope, analysis of community processes also invol
 The trial and error approach also yields benefits, a mistake in the values edited creates an unexpected result of the enemy moving vertically instead of horizontally. Toby embraces this mistake and shares his account of this happy accident enthusiastically. -->
 
 
-
-<!-- NOTE
-Each of these with differing levels of abstraction.
-Break down that of GDPs? -->
-
 <!-- In the last chapter, we examined the use of Rogoff's 3 lenses of cultural, social and personal activity. We can see a broad alignment of these lenses and the scopes of the activity systems above.
-
-This has utility to both researcher and learning designer. The observations of the following chapters are based on this approach of using lenses to focus in on relevant activity.
 
 NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and possibly Bevan and Petrich -->
 
 <!-- to highlight possible tensions and contradictions between competing goals of interrelated activity systems. -->
+
+
+
+
+#### LINK - Applying activity theory to surface contradictions and design tensions experienced by participants and facilitator/s
+
+The followings sections use a process of analysis of contradictions between system elements of the activity systems outlined above. The processes is a formative intervention (explored in chapter three) in that the surfacing of tensions due to changes in the learning design over time are examined. As noted in the introduction, this chapter explores the following areas of contradictions: contradictions in the technical tool use of design, contradictions shaping the development of supporting documentation, contradictions to do with issues of identity and the cultural dimension of participation.
+
 <!-- For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills -->
-
-
-#### Applying activity theory to surface contradictions and design tensions experienced by participants and facilitator/s
-
-The followings sections use a process of analysis of contradictions between system elements of the activity systems outlined above. The processes is a formative intervention (explored in chapter three) in that the surfacing of tensions due to changes in the learning design over time are examined. As noted in the introduction, this chapter explores t.
-he following areas of contradictions: contradictions in the technical tool use of design, contradictions shaping the development of supporting documentation, contradictions to do with issues of identity and the cultural dimension of participation.
 
 <!-- I chart the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002]. -->
 
