--- a/_posts/thesis_chapters/2024-9-5-Design.md
+++ b/_posts/thesis_chapters/2024-9-5-Design.md
@@ -342,51 +342,90 @@ The followings sections use a process of analysis of contradictions between syst
 
 ## C1 - contradictions involving the use of game programming and asset authoring tools
 
-As outlined in Chapter 4, in P1 I invited home education families to take part in a course of game making.  This section addresses contradictions arising in use of tool use in the process of coding and game asset creation focusing on the transition from P1 to P2.
-
-While activity theory has a broad definition of the concept of tool which would include the use of language, concepts, supporting resources and production processes, this section focuses on software tools and code framework used to create games in this program.    
-
-I started with experience of teaching web coding but limited knowledge of how to code games. My own motivations for working with open source, authentic game authoring tools (explored in the introduction), steered me to draw on the documentation of the Mozilla community and select Phaser as a framework. Coding games in webpages is a complex technical process (see appendix 5.x for a break down) involving several interacting languages and processes.
-
-While the choice of open source text coding tools, brought additional challenge to the process building competency in tool use compared to using a block-coding approach, the use of Thimble as a code playground simplified this the process of publishing and editing (see LR).   
-
-Details online HERE of call out.
-https://docs.google.com/document/d/119S3Q7QTplF1hw1MiK02IHO3XvyvxgUsAObw0pWMXhU/edit#heading=h.ilc3cz3teyb6
-And as a publicallly available archive of thr email list.
-https://groups.google.com/g/mozilla-html5-gamemaking-mcr/
-
-The process I started relied greatly on the organisational abilities of parents and tenacity of young people involved rather than structured educational support for the design process (drawing more on a community activist approach rather than teaching).
-
-In P1 I used several open design activities and ongoing processes to support the game design of participants. Early sessions involved, discussion about what makes a good arcade game, brainstorming on game features to add and environmental story, tinkering with pixel-art character making, making craft collages for game backgrounds. The process was creatively chaotic but I became overwhelmed dealing with group process and my expectation that participants would follow their own interests and as a facilitor I would help groups pull projects together. This open and collaborative process was inspired my participation in the Mozilla open leaders programme. However, while the process worked for this iteration, it was not optimal or scalable.  
-
-Reviewing my notes and email interactions I note honesty about feeling out of depth and asking parents for support in organising and bringing more order to group and planning processes.  
+This section addresses as area contradiction that arose in early stages of the programme, in particular P1 where because of the novel nature of the programme, there were difficulties in getting the mechanics of coding underway.  I now outline immediate strategies to address this issue and chart an evolution in tool use in the process of coding and game asset creation, charting the resulting tensions before focusing on the introduction of new tools in P2 to address these tensions.
 
 Given the complexities of learning text based languages, significant areas of contradictions arose between the need of participants to use key tools to create games and their limited skills and experience in using them.
 
-It was only five weeks into the process that we turned to the coding tools and processes.
+**One of my goals for initial stages was to create an inclusive environment**
 
-This is partly as I did not want to start with code that might alienate, but also as my own game coding skills were also being tested to their limits at this point also and I was working hard to introduce coding at a suitable level.
+In P1 I used several open design activities and ongoing processes to support the game design of participants. Early sessions involved, discussion about what makes a good arcade game, brainstorming on game features to add and environmental story, tinkering with pixel-art character making, making craft collages for game backgrounds.
+
+In another stream, I lent learners a laptop loaded with vintage arcade and console games to help build familiarity with arcade and retro game tropes.
+
+<!-- But this aspect was promising but lacked a structured exploration in sessions in a way which conveyed the limits of what our projects could achieve technically. -->
+
+
+
+
+
+
+**Tool use**
+<!-- This is partly as I did not want to start with code that might alienate, but also as my own game coding skills were also being tested to their limits at this point also and I was working hard to introduce coding at a suitable level. -->
+
+<!-- While activity theory has a broad definition of the concept of tool which would include the use of language, concepts, supporting resources and production processes, this section focuses on software tools and code framework used to create games in this program.  -->
+
+It was only in week five of P1 that that I introduced the coding tools and processes. I had experience of teaching web coding but limited knowledge of how to code games. Thus during these five week that time I had been teaching myself the basics following my own repertoires and practices as a mostly self-taught coder.
+
+<!-- My own motivations for working with open source, authentic game authoring tools (explored in the introduction), steered me to draw on the documentation of the Mozilla community and select Phaser as a framework. -->
+
+Coding games in webpages is a complex technical process  involving several interacting languages and processes (see appendix 5.x for a break down).
+
+<!-- The use of a code playground simplified this the process of publishing and editing (see LR).    -->
+
+
+
+
+<!-- In early stages, this gulf created a tension between the need to use the tools and text coding processes which often resulted in frustration and paralysis in the activity of game coding. -->
+<!-- At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building. -->
+
+
+
+My motivations here were also supported by experiences in P1 documented in my journal. I found attempts to convene attention on a presentation screen for instruction based teaching to class uncomfortable, stemming from my judgement that these interventions to be unwelcome interruptions for the participants making activities.  
+
+**input of parents as organisers**
+
+The process was creatively chaotic but I became overwhelmed dealing with group process and my expectation that participants would follow their own interests and as a facilitator I would help groups pull projects together.
+
+Reviewing my notes and email interactions I note honesty about feeling out of depth and asking parents for support in organising and bringing more order to group and planning processes.  
+
+As the process developed I began to increasingly draw on the organisational abilities of parents and tenacity of young people involved rather than structured educational support for the design process (drawing more on a community activist approach rather than teaching).
+
+See appendix 5.x for two examples of suggestions and supporting documentation generated by parents.
+
+
+**The resulting conflict**
+
+A crisis point developed (despite the input of parents) to help an organisational process.
+
+While participants were being supported to develop assets in the form or game characters and ideas for features were being documented via lists, participants  did not have a working either a working knowledge of the tools used, or a process to start to build that knowledge. My own process of self research and informed tinkering drew on years of experience and was therefore not suitable as participants did not share those coding repertoires or familiarity with coding tools. While the suggested tools were theoretically available to the participants online, they were therefore stuck nevertheless.
+
+In terms of a representation in a activity system, we can express this as a developing tension between the tools available to the participants and their objective of actualising their ideas and graphical assets in code form.
+
+![tensions with tools](./Pictures/At_tension_1_v1.png){width=95%}
+
+
+
+My adaptation took a short term approach, which guided a longer term intervention.
+
+**short term adaptation**
+
+While the choice of text coding tools, brought additional challenge to the process building competency in tool use compared to using a block-coding approach.
 
 I taught coding at this stage as I learnt it, by adapting a starting code template of a platform game from a tutorial site and adding it to the code playground to remix from
 
 As the weeks passed, I created various code examples to add functionality requested by participants.
 
-In another stream, I lent learners a laptop loaded with vintage arcade and console games to help build familiarity with arcade and retro game tropes. But this aspect was promising but lacked a structured exploration in sessions in a way which conveyed the limits of what our projects could achieve technically.
-
-<!-- In early stages, this gulf created a tension between the need to use the tools and text coding processes which often resulted in frustration and paralysis in the activity of game coding. -->
-<!-- At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building. -->
+**longer term challenge**
 
 The informal nature of this learning setting encouraged me to prioritise approaches which avoided written or to whole class instruction.
 
-My motivations here were also supported by experiences in P1 documented in my journal. I found attempts to convene attention on a presentation screen for instruction based teaching to class uncomfortable, stemming from my judgement that these interventions to be unwelcome interruptions for the participants making activities.  
-
-The resulted in a design challenge involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within that toolset to facilitate participants to address gaps in their knowledge without needing explicit instruction.
-
 Work needed to be done to address participant expectations of an acceptable scope for the game making project .
+
+The wider in a design challenge involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within that toolset to facilitate participants to address gaps in their knowledge without needing explicit instruction.
 
 This challenge was brought sharply into focus by a particular conflict experienced by one family in particular.
 
-#### The 3D flying bee
+#### The 3D flying bee - APPENDIX?
 
 One family in P1 chose not to continue with most other families after the Xmas break.
 
