editing ch5 around

--- a/_posts/thesis_chapters/2024-9-5-Design.md
+++ b/_posts/thesis_chapters/2024-9-5-Design.md
@@ -369,13 +369,8 @@ Coding games in webpages is a complex technical process  involving several inter
 
 <!-- The use of a code playground simplified this the process of publishing and editing (see LR).    -->
 
-
-
-
 <!-- In early stages, this gulf created a tension between the need to use the tools and text coding processes which often resulted in frustration and paralysis in the activity of game coding. -->
 <!-- At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building. -->
-
-
 
 My motivations here were also supported by experiences in P1 documented in my journal. I found attempts to convene attention on a presentation screen for instruction based teaching to class uncomfortable, stemming from my judgement that these interventions to be unwelcome interruptions for the participants making activities.  
 
@@ -453,50 +448,23 @@ When the family withdrew, in my journal notes I reflected that the they shared o
 <!-- NOTE - PERHAPS EXPLORE COMPLEXITIY OF IDES AS A BARRIER IN RESEARCH - SEE BLUE JAY AND GREEN FOOT TRAINING IDEs -->
 <!-- In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed. -->
 
-## Detail of Tool Evloutio based on resolving Conflicts
+## Detail of primary tool evolution based on resolving Conflicts
 
-Intro to different sections
+This section describes key transformations in use of primary tools. In this study I use the term primary tools to be those used to directly achieve the task and other tool use in the form of help resources, documentation and other support processes as secondary tools. Specifically this section covers the transformation in constitution and use of code and asset authoring tools and a starting game code template.  
+
+### Using a starter game template within a code playground
 
 
+While the code playground and the code template within in it are two separate tools, from the perspective of the learner, they were experienced jointly. As such, I cover them together in this section.
 
-### Use of a Code Playground
+
+#### Code playground.
 
 Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. Learning computer coding presents challenges in part due to unfamiliarity with and potential complexity of code authoring tools and environments [@guzdial_programming_2004]. The use of code playgrounds by novices can mitigate against some of the complexities of code environments. Tricky elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration.
-FIND OR REFERENCE SUPPORT
 
-There was a shift from Thimble to Glitch in the shift from p1 to p2 provoked by Mozilla choice to discontinue which happened concurrently to and of funding of Webmaker programme. The shift brought some new functionality which was incorporated into the learning design. In this section I link code playground design features that I have used with any existing research on the value of Code Playgrounds. I draw on these affordences in later discussion (linking with constructionist theory)
-
-DROPPED THE REMIXING / SHOWCASE - COMMENT / SUMMARISE?
+#### Starting template
 
 
-Turning to reducing code syntax errors, it is of value to compare approaches briefly.
-
-While some  software projects aimed at for novices use visual coding (block coding) approaches to reduce complexities of code use [@bau_learnable_2017; @resnick_scratch:_2009]. This process reduced possibilities for syntax errors (see glossary) and often provides a limited set of blocks to reduce complexity. While this approach not explored here for reasons previously outlined, there are some features of the glitch code playground which help. For example, the environment can detect the file type as javascript from the file extension and then uses a static analysis tool (linter) scan the code for signs of inconsistencies of code and syntax errors and highlight them [@tomasdottir_why_2017].
-
-In glitch such code syntax errors are highlighted via a red dot provided a quick visual indication of where the error occurred. In addition if the user hovered over the dot would give an error message. In analysis of pair interactions, I frequently [how much from video data]  observed the non-coding peer notice and point out the red dot, thus preventing further errors.
-
-ADD IN HOW FREQUENTLY THE PARTICIPANTS DID USE THIS.
-
-DESCRIPTION OF MY INTERVENTION. At times when addressing code snags experienced by participants I would scan the code looking for the red dots and drawing attention to them.
-
-If this was not helpful I would also use the console of the in-built developer tools of the browser [@collins_crossfire_2011-1].
-
-<!--
-MOVE TO LITERATURE REVIEW IF NEEDED
-
-While block coding offers significant advantages (GL)in preventing syntax errors, in a comparison to text coding approaches, Bau and colleagues summarise the inherent disadvantages [@bau_learnable_2017]. These include: block coding can take of a lot of the users screen; making small changes to code can be tricker in blocks than text; block coding can complicate remote collaboration and version control; searching for code structures is simpler using text code. While these disadvantages are more applicable to more advanced users, they remain relevant to my general goal of working with an environment aligned to professional practices. -->
-
-
-<!-- In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments. -->
-
-<!-- In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be self-contained, the use of a JS library in a web coding environment is more open-ended. -->
-<!-- In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on. -->
-
-
-
-### Using a starter game template
-
-The following section describes designs decisions relevant to the evolution of this starting template by drawing on concepts explored in the literature review, namely: UMC approaches; constructionist design heuristics; and the concept of affordances understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].  
 
 The initial use of a working structural template was based on my previous experience of teaching javascript to novices [@chesterman_webmaking_2015].
 
@@ -504,10 +472,18 @@ This template was synthesised from several tutorial to create a game of the _pla
 
 The choice to pre-select a particular genre was initially a pragmatic response to tensions experienced in P1. When offering feedback to address her family's feeling of isolation from the coding process, the parent of the family described in the previous section had requested more hands on play and use of the tools of production before being called on to make creative decisions.
 
-By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game. The following section outlines responsive design process surrounding two main elements: the starting game code template and the code authoring toolset.
+I realised that to allow for this playful experimentation, a purely structural template was insufficient and that a working game template was preferred. To create the template I drew on the structure of online starter templates from several sources to create a minimal template for a two-dimensional platformer game.
+
+Thus in a period of development see D1 Fig 5.x  By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game. and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game. This took the technical form of a webpage with the coding of game done using a JavaScript file drawing on a JavaScript library called phaser.
 
 
-I realised that to allow for this playful experimentation, a purely structural template was insufficient and that a working game template was preferred. To create the template I drew on the structure of online starter templates from several sources  to create a minimal template for a two-dimensional platformer game.
+In their research Kynigos and colleagues [-@kynigos_children_2018] explore this concept as a half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them. This process also aligns with the motivations and techniques of the UMC framework explored in the literature review , in particular the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. In this design, the first participant choice and the need to  transition from the _use_ to _modify_ stages is forced at an early stage by the half-baked design. While this design decision compromises the user choice initially, it allows a  carefully scaffolding of early coding experiences and promotes a shared experience for all participants in a way which facilitates and encourages peer learning. After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement. Data explored in the next chapter supports foundational claims of contructionist computing and UMC advocates  that greater user choice over the design process contributes to participant motivational and a feeling ownership of their projects [@lytle_use_2019; @peppler_computer_2009]
+
+
+<!-- The following section outlines responsive design process surrounding two main elements: the starting game code template and the code authoring toolset. -->
+
+
+
 
 
 **Structural design of the game template**
@@ -518,8 +494,6 @@ phaser consists of several interlinked files of Javascript, HTML and CSS and ima
 <!-- ![simple game template](./Pictures/simple_game_template_3a.png){width=95%} -->
 <!--
 ![simple game template web]({{ site.baseurl }}/Pictures/simple_game_template_3a.png) -->
-
-
 
 ![simple game template](./Pictures/illustrations/template_annot.png){width=95%}
 
@@ -571,7 +545,8 @@ As the end process is visible in fluid behaviour -->
 - Variable changes needed immediate testing.  
 - Especially with starting documents, -->
 
-<!-- While the design suits repeated design practice as illustrated by the example above, not all pairs or individuals interacted with GDP in such a neat way.
+<!-- While the design suiThis took the technical form of  a webpage
+ts repeated design practice as illustrated by the example above, not all pairs or individuals interacted with GDP in such a neat way.
 A later discussion section in this chapter illustrates a more complex interaction with design stages. -->
 <!-- The choice of the starting toolset and mission shapes the balance and profile of initial community activity. -->
 
@@ -585,8 +560,6 @@ A later discussion section in this chapter illustrates a more complex interactio
 To accelerate and support the experimentation of users, I identified changes to the code that were easily recognisable game experience features and where small changes could provoke a high impact on the game experiences. These include changing gravity, altering the player jump height and walking speed.
 
 The starting template began with the game in a broken state thus inviting players to modify the game to fix it. The player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code (see Figure above).
-
-In their research Kynigos and colleagues [-@kynigos_children_2018] explore this concept as a half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them. This process also aligns with the motivations and techniques of the UMC framework explored in the literature review , in particular the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. In this design, the first participant choice and the need to  transition from the _use_ to _modify_ stages is forced at an early stage by the half-baked design. While this design decision compromises the user choice initially, it allows a  carefully scaffolding of early coding experiences and promotes a shared experience for all participants in a way which facilitates and encourages peer learning. After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement. Data explored in the next chapter supports foundational claims of contructionist computing and UMC advocates  that greater user choice over the design process contributes to participant motivational and a feeling ownership of their projects [@lytle_use_2019; @peppler_computer_2009]
 
 The process here began with me imagining what would be a good feature that players would notice and be spurred to change. Here, the deliberately unsuitable game variable is a key affordance of this half-baked game template.
 
@@ -627,6 +600,9 @@ This adaptation had a positive impact on engagement with level design in initial
 is explored via a vignette in appendix 4.x where child participant Toby designs many levels. The goal seems to be to make the game challenging and to add many levels as a way of making his game distinct from others (include BETTER SUMMARY). Participants varied in their approach to level design, some drew on their experiences to mirrors platform game conventions, while others enjoyed working against these conventions, a theme which is explored in more detail in .
 
 <!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
+
+EDIT DOWN MOVE LATER DISCUSSION
+The evolution of the starting template aligned with UMC approaches; constructionist design heuristics; and the concept of affordances understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].  
 
 #### Use of game assets
 
@@ -883,7 +859,7 @@ DEVELOP THIS SECTION -->
 
 ### Narrative on the evolution of resources during P2
 
-The previous section addresses changes to primary tools used to create game code and assets and response to the emerging tensions expereienced by participants in P1. As explored in Chapter 3, understandings of primary and secondary use of tools in the theory of dual stimulation are diverse and inconsistent. In this study I take primary tools to be those used to directly achieve the task and describe other tool use (e.g  documentation and support processes) as secondary tools use or thus comprising dual stimulation.  
+The previous section addresses changes to primary tools used to create game code and assets and response to the emerging tensions expereienced by participants in P1. As explored in Chapter 3, understandings of primary and secondary use of tools in the theory of dual stimulation are diverse and inconsistent.
 
 The advantages of designing scaffolding within primary tool use rather than secondary tools, is that the guidance is built into the production process in a way which aligns with microworld concepts. This has the potendial to thus reducing dependancy on facilitator instruction. In this design, affordances were chosen to supporting the Modify stage of UMC.
 
@@ -1966,3 +1942,44 @@ Table 4.x.  Tools used in mid-level objectives when selecting and planning imple
 |        |     | -->
 
 <!-- Table 4.x.  Tools used in lower-level objectives of implementing specific code structures or stages in creating game assets -->
+
+
+
+### Use of a Code Playground
+
+Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. Learning computer coding presents challenges in part due to unfamiliarity with and potential complexity of code authoring tools and environments [@guzdial_programming_2004]. The use of code playgrounds by novices can mitigate against some of the complexities of code environments. Tricky elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration.
+FIND OR REFERENCE SUPPORT
+MOVE TO LR
+
+<!-- There was a shift from Thimble to Glitch in the shift from p1 to p2 provoked by Mozilla choice to discontinue which happened concurrently to and of funding of Webmaker programme. The shift brought some new functionality which was incorporated into the learning design.  -->
+
+<!-- NOTE
+DROPPED THE REMIXING / SHOWCASE - COMMENT / SUMMARISE? -->
+
+DO I? MOVE MUCH OF THIS LATER IF NOT NEEDED.
+In this section I link code playground design features that I have used with any existing research on the value of Code Playgrounds. I draw on these affordences in later discussion (linking with constructionist theory)
+
+
+Turning to reducing code syntax errors, it is of value to compare approaches briefly.
+
+While some  software projects aimed at for novices use visual coding (block coding) approaches to reduce complexities of code use [@bau_learnable_2017; @resnick_scratch:_2009]. This process reduced possibilities for syntax errors (see glossary) and often provides a limited set of blocks to reduce complexity. While this approach not explored here for reasons previously outlined, there are some features of the glitch code playground which help. For example, the environment can detect the file type as javascript from the file extension and then uses a static analysis tool (linter) scan the code for signs of inconsistencies of code and syntax errors and highlight them [@tomasdottir_why_2017].
+
+In glitch such code syntax errors are highlighted via a red dot provided a quick visual indication of where the error occurred. In addition if the user hovered over the dot would give an error message. In analysis of pair interactions, I frequently [how much from video data]  observed the non-coding peer notice and point out the red dot, thus preventing further errors.
+
+ADD IN HOW FREQUENTLY THE PARTICIPANTS DID USE THIS.
+
+DESCRIPTION OF MY INTERVENTION. At times when addressing code snags experienced by participants I would scan the code looking for the red dots and drawing attention to them.
+
+If this was not helpful I would also use the console of the in-built developer tools of the browser [@collins_crossfire_2011-1].
+
+
+
+
+MOVE TO LITERATURE REVIEW IF NEEDED
+
+While block coding offers significant advantages (GL)in preventing syntax errors, in a comparison to text coding approaches, Bau and colleagues summarise the inherent disadvantages [@bau_learnable_2017]. These include: block coding can take of a lot of the users screen; making small changes to code can be tricker in blocks than text; block coding can complicate remote collaboration and version control; searching for code structures is simpler using text code. While these disadvantages are more applicable to more advanced users, they remain relevant to my general goal of working with an environment aligned to professional practices.
+
+
+In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments.  In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be self-contained, the use of a JS library in a web coding environment is more open-ended.
+
+In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on.
